--- a/style.css
+++ b/style.css
@@ -2,14 +2,14 @@
 ----------------------------------------------------------------------------
 */
 :root {
-  --bg-light: #333e4d;
-  --bg-dark: #2a3543;
-  --bg-darker: #212a36;
-  --color-primary: #8874ef;
-  --color-primary-dark: #772fed;
-  --color-text: #a2acbb;
+  --bg-light: #262427;
+  --bg-dark: #120352ef;
+  --bg-darker: #000000;
+  --color-primary: #b602ec;
+  --color-primary-dark: #242223;
+  --color-text: #ecf1eb;
   --color-white: #fff;
-  --shadow: 0px 6px 30px 2px rgba(0, 0, 0, 0.1);
+  --shadow: 0px 6px 30px 2px rgba(10, 10, 10, 0.74);
 
   /* Font Family */
   --ff-main: "Raleway", sans-serif;
@@ -75,6 +75,15 @@ a {
 img {
   max-width: 100%;
   display: block;
+  background-color: var(--bg-light);
+  width: 400px;  
+  margin-right: 25px;
+  border-radius: 50%;
+  transition: var(--transition);
+}
+img:hover {
+  transform: translateX(0.8rem);
+  box-shadow: var(--shadow);
 }
 
 input,
@@ -485,7 +494,7 @@ body {
 
 /* 10. Testimonials section
 ----------------------------------------------------------------------------
-*/
+
 .testimonial__item {
   text-align: center;
 }
@@ -493,6 +502,7 @@ body {
 .testimonial__icon {
   color: var(--color-primary);
   font-size: 4rem;
+  justify-items: center;
 }
 
 .testimonial__quote {
@@ -512,8 +522,9 @@ body {
 .testimonial__image {
   justify-self: center;
   width: 100%;
-  max-width: 450px;
-  border-radius: 0.5rem;
+  max-width: 350px;
+  border-radius: 25px;
+  background-image: none;
 }
 
 .swiper-wrapper {
@@ -533,7 +544,7 @@ body {
 
 .testimonial__wrapper .swiper-pagination-bullet-active {
   background-color: var(--color-primary);
-}
+}*/
 
 /* 11. Contact section
 ----------------------------------------------------------------------------
@@ -556,11 +567,16 @@ body {
   max-width: 280px;
   padding: 3rem;
   display: flex;
+  cursor: pointer;
   align-items: center;
   flex-direction: column;
   row-gap: 2rem;
   color: var(--color-white);
   text-align: center;
+  box-shadow: var(--shadow);
+}
+.contact__item:hover {
+  transform: translateX(0.2rem);
   box-shadow: var(--shadow);
 }
 
